samples/_failures_safe/1761456858_182cbf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d342a409.c: In function ‘main’:
./samples/SAFE/__tmp_d342a409.c:153:5: error: expected declaration or statement at end of input
  153 |     if (process_text(&processor, input) != 0) {
      |     ^~
./samples/SAFE/__tmp_d342a409.c:153:5: error: expected declaration or statement at end of input
